# BlockchainDemo

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: app_state.rs  errors.rs  main.rs  state.rs
backend/src/models/: account.rs  block.rs  blockchain.rs  dto.rs  mod.rs  transaction.rs  user.rs
backend/src/routes/: accounts.rs  blockchain.rs  mining.rs  mod.rs  transactions.rs
backend/src/services/: account_service.rs  blockchain_service.rs  mining_service.rs  mod.rs
backend/src/utils/: crypto.rs  hashing.rs  mod.rs  validation.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  endpoints.ts
frontend/src/components/: AccountPanel.tsx  BlockCard.tsx  MempoolPanel.tsx  MinePanel.tsx  StatusBanner.tsx  TransactionList.tsx
frontend/src/hooks/: useDashboardInit.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/store/: useDemoStore.ts
frontend/src/types/: index.ts
