[package]
name = "blockchain_demo"
version = "0.1.0"
edition = "2021"
description = "Educational blockchain simulation API (Axum)"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
