[package]
name = "blockchain_demo"
version = "0.1.0"
edition = "2021"
description = "Educational blockchain demo (blocks, mempool, NICOCIN)"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
